Esqueleto Módulo setup

--- a/config/console.php.dist
+++ b/config/console.php.dist
@@ -1,5 +1,7 @@
 <?php
 $params = require(__DIR__ . '/params.php');
+$db = require(__DIR__ . '/db.php');
+
 return [
 	'id' => 'basic-console',
 	'basePath' => dirname(__DIR__),
