--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -1,5 +1,8 @@
 <?php
 $params = require(__DIR__ . '/params.php');
+$db = require(__DIR__ . '/db.php');
+$modules = require(__DIR__ . '/modules.php');
+
 $config = [
 	'id' => 'basic',
 	'basePath' => dirname(__DIR__),
@@ -29,7 +32,9 @@ $config = [
 				],
 			],
 		],
+		'db' => $db,
 	],
+	'modules' => $modules,
 	'params' => $params,
 ];
 
