Agregadas tablas de RBAC - #7

--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -35,6 +35,10 @@ $config = [
 			'enablePrettyUrl' => true,
 		],
 		'db' => $db,
+		'authManager' => [
+			'class' => 'yii\rbac\DbManager',
+			'defaultRoles' => ['guest'],
+		],
 	],
 	'modules' => $modules,
 	'params' => $params,
