--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -36,7 +36,7 @@ $config = [
 		],
 		'db' => $db,
 		'authManager' => [
-			'class' => 'yii\rbac\DbManager',
+			'class' => 'app\components\PhpManager',
 			'defaultRoles' => ['guest'],
 		],
 	],
