--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -5,41 +5,47 @@ $db = require(__DIR__ . '/db.php');
 $modules = require(__DIR__ . '/modules.php');
 
 $config = [
-    'id' => 'basic',
-    'basePath' => dirname(__DIR__),
-    'extensions' => require(__DIR__ . '/../vendor/yiisoft/extensions.php'),
-    'components' => [
-        'cache' => [
-            'class' => 'yii\caching\FileCache',
-        ],
-        'user' => [
-            'identityClass' => 'app\models\User',
+	'id' => 'basic',
+	'basePath' => dirname(__DIR__),
+	'extensions' => require(__DIR__ . '/../vendor/yiisoft/extensions.php'),
+	'defaultRoute' => 'frontend/index',
+	'components' => [
+		'cache' => [
+			'class' => 'yii\caching\FileCache',
+		],
+		'user' => [
+			'identityClass' => 'app\models\User',
             'enableAutoLogin' => true,
-        ],
-        'errorHandler' => [
-            'errorAction' => 'site/error',
-        ],
-        'mail' => [
-            'class' => 'yii\swiftmailer\Mailer',
-            'useFileTransport' => true,
-        ],
-        'log' => [
-            'traceLevel' => YII_DEBUG ? 3 : 0,
-            'targets' => [
-                [
-                    'class' => 'yii\log\FileTarget',
-                    'levels' => ['error', 'warning'],
-                ],
-            ],
-        ],
-        'db' => $db,
-        'urlManager' => [
-            'enablePrettyUrl' => true,
-        ],
-    ],
-    'modules' => $modules,
-    'params' => $params,
+		],
+		'errorHandler' => [
+			'errorAction' => 'site/error',
+		],
+		'mail' => [
+			'class' => 'yii\swiftmailer\Mailer',
+		],
+		'log' => [
+			'traceLevel' => YII_DEBUG ? 3 : 0,
+			'targets' => [
+				[
+					'class' => 'yii\log\FileTarget',
+					'levels' => ['error', 'warning'],
+				],
+			],
+		],
+		'urlManager' => [
+			'enablePrettyUrl' => true,
+		],
+		'view' => [
+			'theme' => [
+				'pathMap' => ['@app/views' => '@app/themes/basic/views'],
+				'baseUrl' => '@web/themes/basic',
+			],
+		],
+		'db' => $db,
 
+	],
+	'params' => $params,
+	'modules' => $modules,
 ];
 
 if (YII_ENV_DEV) {
