--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -7,6 +7,7 @@ $modules = require(__DIR__ . '/modules.php');
 $config = [
 	'id' => 'basic',
 	'basePath' => dirname(__DIR__),
+    'language' => 'es',
 	'extensions' => require(__DIR__ . '/../vendor/yiisoft/extensions.php'),
 	'defaultRoute' => 'frontend/index',
 	'components' => [
@@ -39,6 +40,19 @@ $config = [
 			'theme' => [
 				'pathMap' => ['@app/views' => '@app/themes/basic/views'],
 				'baseUrl' => '@web/themes/basic',
+			],
+		],
+		'i18n' => [
+			'translations' => [
+				'app*' => [
+					'class' => 'yii\i18n\PhpMessageSource',
+					//'basePath' => '@app/messages',
+					//'sourceLanguage' => 'en',
+					'fileMap' => [
+						'app' => 'app.php',
+						'app/error' => 'error.php',
+					],
+				],
 			],
 		],
 		'db' => $db,
