Comenzando módulo de sedes

--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -60,6 +60,9 @@ $config = [
 	],
 	'params' => $params,
 	'modules' => $modules,
+	'bootstrap' => [
+		'administracion'
+	],
 ];
 
 if (YII_ENV_DEV) {
