--- a/config/web.php.dist
+++ b/config/web.php.dist
@@ -5,64 +5,63 @@ $db = require(__DIR__ . '/db.php');
 $modules = require(__DIR__ . '/modules.php');
 
 $config = [
-	'id' => 'basic',
-	'basePath' => dirname(__DIR__),
+    'id' => 'basic',
+    'basePath' => dirname(__DIR__),
     'language' => 'es',
-	'extensions' => require(__DIR__ . '/../vendor/yiisoft/extensions.php'),
-	'defaultRoute' => 'frontend/index',
-	'components' => [
-		'cache' => [
-			'class' => 'yii\caching\FileCache',
-		],
-		'user' => [
-			'identityClass' => 'app\models\User',
+    'extensions' => require(__DIR__ . '/../vendor/yiisoft/extensions.php'),
+    'defaultRoute' => 'frontend/index',
+    'components' => [
+        'cache' => [
+            'class' => 'yii\caching\FileCache',
+        ],
+        'user' => [
+            'identityClass' => 'app\models\User',
             'enableAutoLogin' => true,
-		],
-		'errorHandler' => [
-			'errorAction' => 'site/error',
-		],
-		'mail' => [
-			'class' => 'yii\swiftmailer\Mailer',
-		],
-		'log' => [
-			'traceLevel' => YII_DEBUG ? 3 : 0,
-			'targets' => [
-				[
-					'class' => 'yii\log\FileTarget',
-					'levels' => ['error', 'warning'],
-				],
-			],
-		],
-		'urlManager' => [
-			'enablePrettyUrl' => true,
-		],
-		'view' => [
-			'theme' => [
-				'pathMap' => ['@app/views' => '@app/themes/adminLTE/views'],
-				'baseUrl' => '@web/themes/adminLTE',
-			],
-		],
-		'i18n' => [
-			'translations' => [
-				'app*' => [
-					'class' => 'yii\i18n\PhpMessageSource',
-					//'basePath' => '@app/messages',
-					//'sourceLanguage' => 'en',
-					'fileMap' => [
-						'app' => 'app.php',
-						'app/error' => 'error.php',
-					],
-				],
-			],
-		],
-		'db' => $db,
-
-	],
-	'params' => $params,
-	'modules' => $modules,
-	'bootstrap' => [
-		'administracion'
-	],
+        ],
+        'errorHandler' => [
+            'errorAction' => 'site/error',
+        ],
+        'mail' => [
+            'class' => 'yii\swiftmailer\Mailer',
+        ],
+        'log' => [
+            'traceLevel' => YII_DEBUG ? 3 : 0,
+            'targets' => [
+                [
+                    'class' => 'yii\log\FileTarget',
+                    'levels' => ['error', 'warning'],
+                ],
+            ],
+        ],
+        'urlManager' => [
+            'enablePrettyUrl' => true,
+        ],
+        'view' => [
+            'theme' => [
+                'pathMap' => ['@app/views' => '@app/themes/adminLTE/views'],
+                'baseUrl' => '@web/themes/adminLTE',
+            ],
+            'params' => [                
+            ],
+        ],
+        'i18n' => [
+            'translations' => [
+                'app*' => [
+                    'class' => 'yii\i18n\PhpMessageSource',
+                    'fileMap' => [
+                        'app' => 'app.php',
+                        'app/error' => 'error.php',
+                    ],
+                ],
+            ],
+        ],
+        'db' => $db,
+    ],
+    'params' => $params,
+    'modules' => $modules,
+    'bootstrap' => [
+        'administracion'
+    ],
 ];
 
 if (YII_ENV_DEV) {
